# batch_operation_of_files

./: README.md  pyproject.toml
batch_operation_of_files/: config.json  main.py
