[tool.poetry]
name = "xuexitong-fileloads"
version = "0.1.6"
description = "用来下载学习通课件资料"
authors = ["ziru-w <77319678+ziru-w@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "xuexitong_fileloads"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
